--- a/doc/li110516.bib
+++ b/doc/li110516.bib
@@ -21952,3 +21952,24 @@ Publisher="Kluwer Academic",
    note      = {to be published},
    journal   = {}
 }
+
+@article{raowallace,
+  author = {V U S Rao and W E Wallace},
+  title2 = {Calculation of the Influence of the Crystalline Electric Field on the Spin-Disorder Resistivity of Rare Earth Alloys and Comparison with Results on CeAl$_2$},
+  journal = {Phys. Rev. B},
+  volume = {2},
+  pages = {4613--4616},
+  year = {1970},
+  publisher = {American Physical Society}
+}
+
+@article{dekker,
+  author = {A J Dekker},
+  title2 = {Electrical Resistivity of Metals and Alloys Containing Localized Magnetic Moment},
+  journal = {J. Appl. Phys.},
+  volume = {36},
+  pages = {906--912},
+  year = {1965},
+  publisher = {American Institute of Physics}
+}
+
