--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -268,6 +268,7 @@ CeCu$_2$  & mag phase diagram, fit of dispersive mag. excitations to neutron dat
 \cite{loewenhaupt06-775,schedler03-1313} \\
 CePd$_2$Si$_2$ & neutron diffraction going beyond dipolar approx for mag. formfactor & {\prg %%@
 so1ion}&\cite{rotter09-140405} \\
+CoO & magnetic formfactor - flipping ratios  and  highly inelastic neutron scattering  &{\prg  ic1ion} & \\
 NdBa$_2$Cu$_3$O$_7$ & fit of magnetic neutron diffraction data going beyond dipapprox & {\prg cfield}\index{cfield} & %%@
 \cite{rotter09-140405} \\
 DyCu$_2$ & quadrupolar order and phase diagram & {\prg cfield}\index{cfield}&\cite{yoshida98-1421} \\
@@ -278,6 +279,7 @@ Gd$_3$GaO$_6$  & pointcharge model calculation of crystal field parameters & & \
 GdNi$_2$B$_2$C & magnetostriction and phase diagram, spin only (L=0) & {\prg brillouin}\index{brillouin}& %%@
 \cite{doerr02-5609}\\
 GdRu$_2$Si$_2$ & biquadratic interactions - magnetisation, magnetic structure & {\prg cfield} & \\
+La$_2$CoO$_4$ & dispersive magnetic excitations / spinwaves &{\prg  ic1ion} & \cite{lewtas10-184420}\\
 Lu$_2$MnO$_4$ &  magnetic structure and dispersion of excitations & {\prg so1ion} & \cite{lewtas10-184420} \\
 NdCu$_2$  & crystal field, magnetic structure, phase diagrams, excitations & {\prg cfield}& %%@
 \cite{loewenhaupt95-491,loewenhaupt96-499,rotter00-29,rotter02-751,rotter02-8885} \\
