manual tesserak uq 179 180 Zc and Zs definitions corrected

--- a/doc/tesseral.tex
+++ b/doc/tesseral.tex
@@ -4,8 +4,8 @@ Tesseral Harmonics as defined in terms of spherical harmonics by
 
 \begin{eqnarray}
 Z_{n0}&=&Y_n^0 \\
-Z_{n\alpha}\equiv Z_{n,\alpha}^s&=&\frac{1}{\sqrt{2}}[Y_n^{-\alpha}+(-1)^{\alpha}Y_n^{\alpha}] \dots \alpha>0 \\
-Z_{n\alpha}\equiv Z_{n,|\alpha|}^c&=&\frac{i}{\sqrt{2}}[Y_n^{\alpha}-(-1)^{\alpha}Y_n^{-\alpha}] \dots \alpha<0 \\
+Z_{n\alpha}\equiv Z_{n,\alpha}^c&=&\frac{1}{\sqrt{2}}[Y_n^{-\alpha}+(-1)^{\alpha}Y_n^{\alpha}] \dots \alpha>0 \\
+Z_{n\alpha}\equiv Z_{n,|\alpha|}^s&=&\frac{i}{\sqrt{2}}[Y_n^{\alpha}-(-1)^{\alpha}Y_n^{-\alpha}] \dots \alpha<0 \\
 \end{eqnarray}
 
 A similar table has been given in ~\cite{goerrler96-121} on p. 238 (mind, there are errors in $Z^c_{41}$,$Z^c_{43}$,$Z^c_{52}$ %%@
