Changed definition of Llm and Blm/Alm parameters in ic1ion and cfield to remove sign(q) factor. Updated manual.

--- a/doc/cfparconventions.tex
+++ b/doc/cfparconventions.tex
@@ -53,8 +53,8 @@ In summary, the various types of crystal field parameters are:
 
 \begin{center} \begin{tabular}{@{\extracolsep{\fill}}r|l|l} \hline
      Parameter  & Relation to Llm                                                      & Normalisation \\ \hline
-     Alm        & = sign($m$) $ \lambda_{lm} L_l^m /\langle r^l \rangle$               & Stevens \\
-     Blm        & = sign($m$) $ \lambda_{lm} L_l^m \langle J || \theta_l || J \rangle$ & Stevens \\
+     Alm        & =           $ \lambda_{lm} L_l^m /\langle r^l \rangle$               & Stevens \\
+     Blm        & =           $ \lambda_{lm} L_l^m \langle J || \theta_l || J \rangle$ & Stevens \\
      ARlm       & =           $ \lambda_{lm} L_l^m $                                   & Stevens \\
      Wlm        & = half($m$) $ \lambda_{lm} L_l^m /\langle r^l \rangle$               & Stevens \\
      Vlm        & = half($m$) $ \lambda_{lm} L_l^m \langle J || \theta_l || J \rangle$ & Stevens \\
