--- a/doc/cfparconventions.tex
+++ b/doc/cfparconventions.tex
@@ -8,7 +8,7 @@ the tesseral harmonic functions (see Appendix~\ref{tesseral}), and replacing all
 $x$, $y$, and $z$ with $J_x$, $J_y$ and $J_z$ and allowing for the commutation relations of the angular
 momentum operators, but without considering the normalisation condition of these functions and hence are missing
 the prefactors before the square brackets in the expressions in Appendix~\ref{tesseral}. We denote these
-prefactors $p_{kq}$. The Stevens crystal field Hamiltonian is thus
+prefactors $p_{lm}$. The Stevens crystal field Hamiltonian is thus
 
 \[
 \mathcal{H}_{\mathrm{cf}} = \sum_{l,m} A_{lm} \langle r^l \rangle \langle J || \theta_l || J \rangle \hat{O}_l^m (J)
@@ -21,23 +21,23 @@ valid. Alternatively, the product $B_l^m = A_{lm} \langle r^l \rangle \langle J 
 also commonly used, particularly in the neutron scattering literature.
 
 Wybourne~\cite{wybourne65} and subsequent co-authors on the other hand chose to use the tensor operators 
-$\hat{C}_{lm}$ which transform in the same way as the functions $C_{lm}(\theta,\phi) = \sqrt{4\pi / (2k+1)}
+$\hat{C}_{lm}$ which transform in the same way as the functions $C_{lm}(\theta,\phi) = \sqrt{4\pi / (2l+1)}
 Y_{lm}(\theta,\phi)$, where $Y_{lm}(\theta,\phi)$ are the spherical harmonic functions, to describe the crystal
 field. Thus the angular-dependent part of the crystal field matrix elements used by Wybourne differed from
-that of Stevens by the factor $\lambda_{k0} = p_{k0} \sqrt{8\pi / (2k+1)}$ and
- $\lambda_{kq} = p_{kq} \sqrt{8\pi / (2k+1)}$ for $q\neq 0$. The crystal field Hamiltonian used by Wybourne is
+that of Stevens by the factor $\lambda_{k0} = p_{k0} \sqrt{4\pi / (2l+1)}$ and
+ $\lambda_{lm} = p_{lm} \sqrt{8\pi / (2l+1)}$ for $q\neq 0$. The crystal field Hamiltonian used by Wybourne is
 thus (in our notation)
 
 \[
-\mathcal{H}_{\mathrm{cf}} = \sum_{l,m} D_l^m \hat{C}_{lm}
+\mathcal{H}_{\mathrm{cf}} = \sum_{l,m\geq 0} D_l^{m} \hat{C}_{lm}
 \]
 
 The disadvantage of the Wybourne approach is that one requires imaginary crystal field parameters, because the
-tensor operators $\hat{C}_{kq}$ are not Hermitian. In {\prg McPhase}, we have instead chosen to use slightly
-different tensor operators $\hat{T}_{kq}$, which are the Hermitian combinations of the $\hat{C}_{kq}$,
+tensor operators $\hat{C}_{lm}$ are not Hermitian. In {\prg McPhase}, we have instead chosen to use slightly
+different tensor operators $\hat{T}_{lm}$, which are the Hermitian combinations of the $\hat{C}_{lm}$,
 
 \[
-  \hat{T}_{k0} = \hat{C}_{k0}, \qquad \hat{T}_{k,\pm|q|} = \sqrt{\pm 1} \left[ \hat{C}_{k,-|q|} \pm (-1)^{|q|} \hat{C}_{k,|q|} \right]
+  \hat{T}_{l0} = \hat{C}_{l0}, \qquad \hat{T}_{l,\pm|m|} = \sqrt{\pm 1} \left[ \hat{C}_{l,-|m|} \pm (-1)^{|m|} \hat{C}_{l,|m|} \right]
 \]
 
 \noindent giving the Hamiltonian
@@ -47,7 +47,7 @@ different tensor operators $\hat{T}_{kq}$, which are the Hermitian combinations 
 \]
 
 Our $L_l^m$ parameters therefore have the same normalisation as the Wybourne parameters but will be real, with
-the imaginary parts expressed by the $q<0$ components of the $\hat{T}_{kq}$ operator.
+the imaginary parts expressed by the $q<0$ components of the $\hat{T}_{lm}$ operator.
 
 In summary, the various types of crystal field parameters are:
 
@@ -71,8 +71,8 @@ are given in table~\ref{tab:wytostev}.
 \begin{table}[h] \renewcommand{\arraystretch}{1.3}
   \begin{center}
    %\begin{tabular*}{10cm}{@{\extracolset{\fill}}|c|c|c|}
-   %  \multicolumn{3}{|c|}{$k$~~~$q$~~~$\lambda_{kq}$} \\ \hline
-   %  $k$  &  $q$  &  $\lambda_{kq}$ \\ \hline \hline
+   %  \multicolumn{3}{|c|}{$k$~~~$q$~~~$\lambda_{lm}$} \\ \hline
+   %  $k$  &  $q$  &  $\lambda_{lm}$ \\ \hline \hline
    %  $2$  &  $0$  &  $\frac{1}{2}$  \\
    %  $2$  &  $1$  &  $-\sqrt{6}$  \\
    %  $2$  &  $2$  &  $\frac{1}{2}\sqrt{6}$  \\
@@ -100,14 +100,14 @@ are given in table~\ref{tab:wytostev}.
             $\frac{3}{8}\sqrt{77}$ & $\frac{1}{16}\sqrt{231}$ \\
       \hline
     \end{tabular}
-    \caption{\emph{Ratios $\lambda_{kq}$ of the Stevens to the real valued
+    \caption{\emph{Ratios $\lambda_{lm}$ of the Stevens to the real valued
  Wybourne normalised parameters}.
-$\lambda_{kq} \equiv B_k^q/(\theta_k^qL_k^q)= A_{kq}\langle r^k \rangle / L_k^q$. 
-$ \lambda_{kq}$ are related to the prefactors in the 
-tesseral harmonics (see appendix~\ref{tesseral}) $p_{kq}$ by 
-$\lambda_{k0} =\sqrt{\frac{8\pi}{2k+1}}|p_{k0}|$ and
-$\lambda_{kq} =\sqrt{\frac{8\pi}{2k+1}}|p_{kq}|$ for $q \neq 0$~\cite[note that Newman on p.30, equ (3.7) defines
+$\lambda_{lm} \equiv B_l^m/(\theta_l^mL_l^m)= A_{lm}\langle r^l \rangle / L_l^m$. 
+$ \lambda_{lm}$ are related to the prefactors in the 
+tesseral harmonics (see appendix~\ref{tesseral}) $p_{lm}$ by 
+$\lambda_{l0} =\sqrt{\frac{4\pi}{2l+1}}|p_{l0}|$ and
+$\lambda_{lm} =\sqrt{\frac{8\pi}{2l+1}}|p_{lm}|$ for $m \neq 0$~\cite[note that Newman on p.30, equ (2.7) defines
 his real valued Wybourne 
-parameters $B_q^k({\rm Newman})\equiv (-1)^qL_k^q$]{newman00-1}.} \label{tab:wytostev}
+parameters $B_m^l({\rm Newman})\equiv (-1)^m L_l^m$]{newman00-1}.} \label{tab:wytostev}
   \end{center}
 \end{table}
